<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/gradient_bg"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:background="@drawable/input_outline_signin_up"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/input_outline_signin_up"
            android:padding="15dp"
            android:hint="@string/password"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/email_signIn_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:text="@string/login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:text="@string/create_account"/>

    </LinearLayout>

</LinearLayout>