<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/gradient_bg"
    tools:context=".PostJournalActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="377dp"
        android:layout_height="250dp"
        android:background="@drawable/bg"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitXY"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/postCameraButton"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/gallery"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/post_user_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="58dp"
        android:text="@string/debasish"
        android:textSize="24sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postCameraButton"
        app:layout_constraintVertical_bias="0.937" />

    <TextView
        android:id="@+id/postDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/today"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_user_textView"
        app:layout_constraintVertical_bias="0.055" />

    <EditText
        android:id="@+id/post_title_editText"
        android:layout_width="320dp"
        android:layout_height="29dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/post_desc_editText"
        android:layout_width="320dp"
        android:layout_height="53dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/your_thoughts"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_title_editText"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:id="@+id/post_save_journal_button"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_desc_editText"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/post_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/post_save_journal_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_desc_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>